--- a/07.spring/lec04_jsp/src/main/resources/application.properties
+++ b/07.spring/lec04_jsp/src/main/resources/application.properties
@@ -18,5 +18,8 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate=info
 
 # 4. ViewResolver Setting
-spring.mvc.view.prefix=/WEB-INF/board/
+#spring.mvc.view.prefix=/WEB-INF/board/
+#spring.mvc.view.suffix=.jsp
+
+spring.mvc.view.prefix=WEB-INF/member/
 spring.mvc.view.suffix=.jsp
