--- a/07.spring/lec09_summary/pom.xml
+++ b/07.spring/lec09_summary/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.12</version>
+		<version>2.7.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.lec</groupId>
-	<artifactId>lec09_summary</artifactId>
+	<artifactId>lec02_board</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>lec09_summary</name>
-	<description>Demo project for Spring Boot</description>
+	<name>lec02_board</name>
+	<description>Spring boot project for Board Applicaion</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
