--- a/07.spring/lec09_summary/src/main/resources/application.properties
+++ b/07.spring/lec09_summary/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-server.port=8089
+# Server Port
+server.port= 8089
 
 # DataSource Setting
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/spring
+spring.datasource.url=jdbc:mariadb://localhost:3306/board
 spring.datasource.username=root
 spring.datasource.password=12345
 
@@ -10,19 +11,15 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB106Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Logging Setting
 logging.level.org.hibernate=info
 
-#################################
-###	Presentation Layer    ###
-#################################
-
 # Thymeleaf Cache Setting
 spring.thymeleaf.cache=false
 
-# file upload / download setting
+# file upload/download path
 path.upload=D:/temp/upload/
 path.download=D:/temp/download/
